# clear-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  fly.toml  main.py  opik.config  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-build.yml
configs/: prompts.py
model/: main.py
schema/: api_schema.py  main.py
