[project]
name = "clear-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.22.0",
    "gunicorn>=23.0.0",
    "instructor>=1.7.9",
    "opik>=1.7.37",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.1",
]
